# my_sdl_shooter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  git流程.txt
src/: background.cpp  background.h  game.cpp  game.h  main.cpp  scene.cpp  scene.h  scene_main.cpp  scene_main.h
src/font_manager/: CMakeLists.txt  font_manager.cpp  font_manager.h
src/music_manager/: CMakeLists.txt  music_manager.cpp  music_manager.h
src/object/: button_pause.cpp  enemy.h  player.cpp  player.h  player_bullet.cpp  player_bullet.h
src/scene/: CMakeLists.txt  scene.h  scene_end.cpp  scene_end.h  scene_main.cpp  scene_main.h  scene_title.cpp  scene_title.h
src/scene_main_object/: CMakeLists.txt  button_pause.cpp  button_pause.h  enemy.cpp  enemy.h  enemy_bullet.cpp  enemy_bullet.h  explosion.cpp  explosion.h  item.h  item_life_restoring.cpp  item_life_restoring.h  music_manager.cpp  player.cpp  player.h  player_bullet.cpp  player_bullet.h
src/tests/: test.cpp
